--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,11 @@ header {
     margin: 0 auto;
 }
 
+.logo img {
+    width: 6.25rem ;
+    padding-top: 0.313rem;
+}
+
 nav ul {
     display: flex;
     list-style: none;
@@ -75,7 +80,6 @@ footer {
     bottom: 0;
     width: 100%;
 }
-
 
 /* Scroll bar css */
 ::-webkit-scrollbar {
